--- a/databindingdemo/src/main/res/layout/activity_main.xml
+++ b/databindingdemo/src/main/res/layout/activity_main.xml
@@ -18,21 +18,27 @@
             android:id="@+id/et_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:addTextChangedListener="@{mainViewModel.userNameChangeListener}"
-            android:hint="请输入用户名" />
+            android:hint="请输入用户名"
+            app:addTextChangedListener="@{mainViewModel.userNameChangeListener}" />
 
         <EditText
             android:id="@+id/et_pwd"
             android:layout_width="match_parent"
-            app:addTextChangedListener="@{mainViewModel.getTextWatcher}"
             android:layout_height="wrap_content"
-            android:hint="请输入密码" />
+            android:hint="请输入密码"
+            app:addTextChangedListener="@{mainViewModel.getTextWatcher}" />
 
         <Button
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
-            android:onClick="@{mainViewModel.login}"
             android:layout_height="wrap_content"
+            android:onClick="@{mainViewModel.login}"
             android:text="登录" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="@{mainViewModel.jump}"
+            android:text="数据变化实时更新" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 </layout>
